--- a/docs/使用教程.md
+++ b/docs/使用教程.md
@@ -27,8 +27,8 @@
 
 1. 先关闭原插件，避免冲突。
 2. 备份笔记库（因在设置中修改DataLocation后，会删除笔记内容中的复习信息，另存到 单独文件 tracked_files.json。 ）
-
-如果是想用FSRS算法，需要按上述CASE1推荐设置。
+3. 关闭Obsidian.md，复制原插件的`obsidian-spaced-repetition/data.json` 到 `obsidian-spaced-repetition-recall/data.json`，再打开Obsidan.md。
+4. 如果是想用FSRS算法，需要按上述CASE1推荐设置。
 
 ---
 
