-  fix cardtext change -  update docs -  update template -  add card debug msg, show notice when iteminfo -  change cloze length [...] by answer length -  close #27, floatBar use menu, mobile touch to close it. -  fix #30 queue error -  refactor, seperate cmd and query -  add test.ts

--- a/docs/使用教程.md
+++ b/docs/使用教程.md
@@ -56,6 +56,10 @@
 
 通过命令行，或电脑端点击状态栏/右侧边栏的笔记就可以打开复习笔记。通过命令行、悬浮栏或菜单栏可反馈记忆程度
 
+-   电脑端，在悬浮栏单击右键，可以关闭浮栏、设置 时间间隔显隐;
+-   移动端，从浮栏向上滑 关闭浮栏，长按浮栏 设置 时间间隔显隐。
+-   时间间隔显隐 建议：复习类不显示，渐进总结/增量写作显示；
+
 #### 复习卡片
 
 通过命令行，或电脑端点击左侧边导航栏的卡片就可以复习。
@@ -74,7 +78,7 @@
 #### 算法Algorithms
 
 不同算法参数不同，请尽量使用一个算法，不要反复切换算法。
-默认的 Anki 优化算法、Anki 算法 : [Algorithms desc](./en/algorithms.md)
+[默认的 Anki 优化算法](./en/algorithms.md)、[Anki 算法](https://github.com/martin-jw/obsidian-recall#currently-available-algorithms) 、
 [Fsrs 算法](https://github.com/open-spaced-repetition/fsrs.js)
 
 #### 实验性功能
