chore: update docs     limit hash length=6     data digit limit     feat untrackSetting     refactor settings  rename  private     refactor track
    add sync after (un)track note
    fix reload
    fix #32, untrack note
    fix que
    fix item info
    fix #31 loc switch
    update statusbar
    update touch
    fix keyEvent
    fix opennextNote
    fix test err
    add shortcutKeys

--- a/docs/使用教程.md
+++ b/docs/使用教程.md
@@ -4,7 +4,9 @@
 
 #### CASE1: 没有使用原SR插件，直接使用这个插件
 
-推荐设置项
+推荐设置
+    - 数据位置： in plugin/vault/specified folder (不能保存在笔记中)
+    - 算法： Fsrs（用这个修改版插件应该都是冲这个来的😄️）
 ![image](https://github.com/open-spaced-repetition/obsidian-spaced-repetition-recall/assets/9208450/a22d23df-5d11-4b19-9007-e1530e2808be)
 
 算法对应的具体参数设置，可参考[FSRS v4](https://github.com/open-spaced-repetition/fsrs4anki/wiki/The-Algorithm#fsrs-v4)
@@ -37,7 +39,7 @@
 #### 添加笔记
 
 可在笔记中添加复习笔记对应的标签，或通过命令行/菜单栏[tracking notes](https://github.com/martin-jw/obsidian-recall#tracking-notes)。
-通过命令行/菜单栏untrack Note可取消。
+通过命令行/菜单栏untrack Note可不再对该笔记复习（需笔记中没有复习标签）;通过设置项`untrackWithReviewTag`,可以在删除笔记中复习标签后，就不再对该笔记复习.
 
 添加文件夹中的笔记，可在文件夹上右键， (un)track All Notes
 ![image](https://github.com/open-spaced-repetition/obsidian-spaced-repetition-recall/assets/9208450/163f397c-cc8f-49a6-ab6f-cb929cf91d2d)
@@ -56,7 +58,8 @@
 
 通过命令行，或电脑端点击状态栏/右侧边栏的笔记就可以打开复习笔记。通过命令行、悬浮栏或菜单栏可反馈记忆程度
 
--   电脑端，在悬浮栏单击右键，可以关闭浮栏、设置 时间间隔显隐;
+-   电脑端，在悬浮栏单击右键，可以关闭浮栏、设置 时间间隔显隐;  
+-   电脑端，在打开浮栏且笔记在**阅读/预览**视图(非编辑视图)时，可使用数字快捷键（0重来，1，2，3简单）反馈记忆程度；
 -   移动端，从浮栏向上滑 关闭浮栏，长按浮栏 设置 时间间隔显隐。
 -   时间间隔显隐 建议：复习类不显示，渐进总结/增量写作显示；
 
