--- a/docs/使用教程.md
+++ b/docs/使用教程.md
@@ -5,9 +5,9 @@
 #### CASE1: 没有使用原SR插件，直接使用这个插件
 
 推荐设置
-    - 数据位置： in plugin/vault/specified folder (不能保存在笔记中)
-    - 算法： Fsrs（用这个修改版插件应该都是冲这个来的😄️）
-![image](https://github.com/open-spaced-repetition/obsidian-spaced-repetition-recall/assets/9208450/a22d23df-5d11-4b19-9007-e1530e2808be)
+
+-   数据位置： in plugin/vault/specified folder (不能保存在笔记中) -   算法： Fsrs（用这个修改版插件应该都是冲这个来的😄️）
+    ![image](https://github.com/open-spaced-repetition/obsidian-spaced-repetition-recall/assets/9208450/a22d23df-5d11-4b19-9007-e1530e2808be)
 
 算法对应的具体参数设置，可参考[FSRS v4](https://github.com/open-spaced-repetition/fsrs4anki/wiki/The-Algorithm#fsrs-v4)
 
@@ -58,7 +58,7 @@
 
 通过命令行，或电脑端点击状态栏/右侧边栏的笔记就可以打开复习笔记。通过命令行、悬浮栏或菜单栏可反馈记忆程度
 
--   电脑端，在悬浮栏单击右键，可以关闭浮栏、设置 时间间隔显隐;  
+-   电脑端，在悬浮栏单击右键，可以关闭浮栏、设置 时间间隔显隐;
 -   电脑端，在打开浮栏且笔记在**阅读/预览**视图(非编辑视图)时，可使用数字快捷键（0重来，1，2，3简单）反馈记忆程度；
 -   移动端，从浮栏向上滑 关闭浮栏，长按浮栏 设置 时间间隔显隐。
 -   时间间隔显隐 建议：复习类不显示，渐进总结/增量写作显示；
