add reschedule and postpone (#43)
Co-authored-by: Newdea <Newdea@users.noreply.github.com>

--- a/docs/使用教程.md
+++ b/docs/使用教程.md
@@ -70,6 +70,23 @@
 
 集中复习（CRAM）模式，不更新复习数据。
 
+#### 延后Postpone
+
+对今天之前（不包含今天）的笔记/卡片（当前保留率大于65%）进行延后
+_明日复明日，明日何其多_
+_如果对新排程不满意，直接重启Obsidian即可恢复之前的排程。在复习个笔记/卡片后新排程才会保存_
+
+#### 改到x天后复习
+
+对指定的笔记/卡片修改到x天后进行复习，不判断其当前复习时间及保留率。
+_建议只是修改个别的笔记或笔记内卡片，不要做大批量修改，避免那天复习内容过多_
+
+#### 重排Reschedule
+
+根据设置中及笔记/卡片前的参数，重新计算所有**已经有排程**的笔记/卡片 的下次复习时间。
+_这个基本用不到_
+_如果对新排程不满意，直接重启Obsidian即可恢复之前的排程。在复习个笔记/卡片后新排程才会保存_
+
 #### 查看数据统计
 
 通过命令行，`SR 查看数据`
